@@ -1,6 +1,7 @@
 #Changelog
 ## [1.2.3] - 2019-11-19
 ### Added
+- PLUGIN :: dt-transform register
 - BS :: Configuration Context with ENV
 - PLUGIN :: do-http
 - PLUGIN :: do-bsspeak
